data/derived/comb/progs/unify/prog1057.ml.out
Characters 127-129:
  if (List.mem tl [hd] = true) then seen
                   ^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
